; ModuleID = '/home/carl/AnghaBench/micropython/ports/pic16bit/extr_board.c_led_toggle.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/pic16bit/extr_board.c_led_toggle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RED_LED = common dso_local global i32 0, align 4
@YELLOW_LED = common dso_local global i32 0, align 4
@GREEN_LED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @led_toggle(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  switch i32 %3, label %13 [
    i32 1, label %4
    i32 2, label %7
    i32 3, label %10
  ]

4:                                                ; preds = %1
  %5 = load i32, i32* @RED_LED, align 4
  %6 = xor i32 %5, 1
  store i32 %6, i32* @RED_LED, align 4
  br label %13

7:                                                ; preds = %1
  %8 = load i32, i32* @YELLOW_LED, align 4
  %9 = xor i32 %8, 1
  store i32 %9, i32* @YELLOW_LED, align 4
  br label %13

10:                                               ; preds = %1
  %11 = load i32, i32* @GREEN_LED, align 4
  %12 = xor i32 %11, 1
  store i32 %12, i32* @GREEN_LED, align 4
  br label %13

13:                                               ; preds = %1, %10, %7, %4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
